# kr_param_map

./: .gitignore  README.md
param_env/: CMakeLists.txt  package.xml
param_env/clear_pos/: clear_2d.csv  clear_3d.csv
param_env/data/pcd/forest/: 70.pcd
param_env/data/pcd/urban/: 2.pcd  72.pcd
param_env/dataset/: pt5080902.pcd  pt5080903.pcd  pt5080904.pcd  pt5080911.pcd
param_env/dataset/exp/: pt5080901.pcd  pt5080902.pcd  pt5080903.pcd  pt5080904.pcd  pt5080905.pcd
param_env/include/geo_utils/: geo_utils.hpp
param_env/include/map_utils/: closed_shapes.hpp  geo_map.hpp  grid_map.hpp  map_basics.hpp  map_to_voxel.hpp  poly_map.hpp  struct_map_gen.hpp
param_env/launch/: default.rviz  read_grid_map.launch  read_map.launch  structure_map.launch
param_env/src/: click_map.cpp  param_map.cpp  read_grid_map.cpp  structure_map.cpp
param_env/utils/: move_data.py
param_env_msgs/: CMakeLists.txt  package.xml
param_env_msgs/srv/: changeMap.srv
param_mpl/: CMakeLists.txt  package.xml
param_mpl/include/mpl_utils/: uni_mp.hpp
param_mpl/launch/map_planner_node/: test.launch  trajectory_command.bag
param_mpl/src/: map_planner_node.cpp
vicon_env/: CMakeLists.txt  package.xml
vicon_env/launch/: vicon.rviz  vicon_map.launch
vicon_env/semantics/: 3dcase2.csv
vicon_env/src/: vicon_map2d.cpp  vicon_map3d.cpp
