<package format="2">
  <name>param_env_msgs</name>
  <version>1.0.1</version>
  <description>param_env_msgs</description>
  <maintainer email="yishao@seas.upenn.edu">Yifei Simon Shao </maintainer>

  <license>BSD</license>

  <author>Yifei Simon Shao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
