<?xml version="1.0"?>
<package format="2">
  <name>param_mpl</name>
  <version>1.0.0</version>
  <description>The param_mpl package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <author>Yuwei Wu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>motion_primitive_library</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>decomp_ros_utils</depend>
  <depend>planning_ros_msgs</depend>
  <depend>planning_ros_utils</depend>

</package>
