<?xml version="1.0"?>
<package format="2">
  <name>vicon_env</name>
  <version>1.3.0</version>
  <description>The vicon_env package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">yuweiwu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <exec_depend>message_runtime</exec_depend>


</package>
